--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,6 @@
-body {
+body,h1,h2,h3,h4,h5,h6 {
     font-family: 'Oregano';
+
 }
 .row {
     max-width: 100%;
@@ -25,6 +26,6 @@ body {
 .contacts{
     height:50%;
     width:100%;
-    background-color: black;
-    color:white;
+    background-color:white;
+    color:black;
 }
