--- a/css/app.css
+++ b/css/app.css
@@ -31,7 +31,7 @@ body,h1,h2,h3,h4,h5,h6 {
 }
 .fa{
     font-size: 30px;
-    color: blueviolet;
-    border: solid 1px black;
-    border-radius: 50%;
+    color: grey;
+
+
 }
