--- a/css/app.css
+++ b/css/app.css
@@ -33,8 +33,9 @@ body,h1,h2,h3,h4,h5,h6 {
     font-size: 100px;
     color: grey;
 
+
 }
 .fa:hover{
     color: black;
-    border: white;
+    border:  solid 1px black;
 }
