--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5,h6 {
 .contacts{
     height:50%;
     width:100%;
-    background-color:white;
+    background-color:lightgrey;
     color:black;
 }
 .fa{
