--- a/css/app.css
+++ b/css/app.css
@@ -58,7 +58,68 @@ body,h1,h2,h3,h4,h5,h6 {
 }
 .footer{
     background-color: black;
+    width:100%;
     height :20%;
     color:white;
 
+}
+
+html {
+  font-family: "Oswald";
+  margin: 1em 20%;
+  background-color: #fafafa;
+}
+header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  border-bottom: 1px solid #e3e3e8;
+}
+#logo {
+  float: left;
+  font-size: 3em;
+  margin: 0;
+  padding: .4em;
+  text-decoration: none;
+  color: #333;
+  border-right: 1px solid #e3e3e8;
+  transition: .5s all;
+}
+#logo:hover {
+  color: #fafafa;
+  background-color: #333;
+}
+nav {
+  float: left;
+}
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 2.2em 2em;
+}
+nav ul li {
+  display: inline;
+  padding: 0 .4em;
+}
+nav ul li a {
+  color: #333;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.6em;
+  padding-bottom: 1.3em;
+  transition: .5s color;
+}
+nav ul li a:hover {
+  border-bottom: 3px solid #333;
+}
+#current {
+  color: #ff4629;
+  border-bottom: 3px solid #333;
+}
+#fb:hover {
+  color: #3b5998;
+}
+#twitter:hover {
+  color: #00acee;
 }
