--- a/css/app.css
+++ b/css/app.css
@@ -63,63 +63,75 @@ body,h1,h2,h3,h4,h5,h6 {
     color:white;
 
 }
+.menu {
+  line-height: 1;
+  margin: 0 auto 3em;
+}
 
-html {
-  font-family: "Oswald";
-  margin: 1em 20%;
-  background-color: #fafafa;
-}
-header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  border-bottom: 1px solid #e3e3e8;
-}
-#logo {
-  float: left;
-  font-size: 3em;
+.menu__list {
+  position: relative;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
   margin: 0;
-  padding: .4em;
-  text-decoration: none;
-  color: #333;
-  border-right: 1px solid #e3e3e8;
-  transition: .5s all;
+  padding: 0;
+  list-style: none;
 }
-#logo:hover {
-  color: #fafafa;
-  background-color: #333;
+
+.menu__item {
+  display: block;
+  margin: 1em 0;
 }
-nav {
-  float: left;
+
+.menu__link {
+  font-size: 1.05em;
+  font-weight: bold;
+  display: block;
+  padding: 1em;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 2.2em 2em;
+.menu__link:hover,
+.menu__link:focus {
+	outline: none;
 }
-nav ul li {
-  display: inline;
-  padding: 0 .4em;
+.menu--prospero .menu__link {
+	position: relative;
+	display: block;
+	margin: 0 1.5em;
+	padding: 0.75em 0;
+	text-align: center;
+	color: #b5b5b5;
+	transition: color 0.3s;
 }
-nav ul li a {
-  color: #333;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.6em;
-  padding-bottom: 1.3em;
-  transition: .5s color;
+.menu--prospero .menu__link:hover,
+.menu--prospero .menu__link:focus {
+	color: #929292;
 }
-nav ul li a:hover {
-  border-bottom: 3px solid #333;
+
+.menu--prospero .menu__item--current .menu__link {
+	color: #d94f5c;
 }
-#current {
-  color: #ff4629;
-  border-bottom: 3px solid #333;
+.menu--prospero .menu__link::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 4px;
+	background: #d94f5c;
+	transform: scale3d(0, 1, 1);
+	transition: transform 0.1s;
 }
-#fb:hover {
-  color: #3b5998;
-}
-#twitter:hover {
-  color: #00acee;
+.menu--prospero .menu__item--current .menu__link::before {
+	transform: scale3d(1, 1, 1);
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 0.3s;
 }
