--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ h6 {
     font-family: 'Oregano';
 }
 
-.row {
+.row.row {
     max-width: 100%;
 }
 
@@ -70,14 +70,12 @@ h6 {
     color: black;
     border: solid 1px black;
 }
-<<<<<<< HEAD
-=======
 .footer{
     background-color: black;
     width:100%;
     height :20%;
     color:white;
->>>>>>> origin/arvid
+}
 
 .footer {
     background-color: black;
